--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
     <div class="content">
         <div class="slider-contain">
             <div id="js-sd1" class="slider js-slider">
+                <img src="./assets/slider/chicago.jpg" alt="">
                 <div class="text-slider">
                     <h3>Chicago</h3>
                     <p>Thank you, Chicago - A night we won't forget</p>
                 </div>
             </div>
             <div id="js-sd2" class="slider js-slider">
+                <img src="./assets/slider/ny.jpg" alt="">
                 <div class="text-slider">
                     <h3>New York</h3>
                     <p>The atmosphere in New York is lorem ipsum.</p>
                 </div>
             </div>
             <div id="js-sd3" class="slider js-slider">
+                <img src="./assets/slider/la.jpg" alt="">
                 <div class="text-slider">
                     <h3>Los Angeles </h3>
                     <p> We had the best time playing at Venice Beach!</p>
