--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
                 </div>
                 <div class="form">
                     <form action="">
-                        <input class="text" type="text" required placeholder="Name" >
-                        <input class="email" type="email" required placeholder="Email" >
+                        <div class="half">
+                            <input class="text" type="text" required placeholder="Name" >
+                            <input class="email" type="email" required placeholder="Email" >
+                        </div>
                         <input class="message" type="text" required placeholder="Message">
                         <button type="submit">SEND</button>
                     </form>
